--- a/amsterdam.html
+++ b/amsterdam.html
@@ -25,6 +25,7 @@
   <main>
 
     <section class="local-navigation">
+      <h1>Explore our favorite Destinations</h1>
       <ul>
         <li><a href="paris.html">Paris</a></li>
         <li><a href="rome.html">Rome</a></li>
@@ -33,40 +34,49 @@
         <li><a href="barcelona.html">Barcelona</a></li>
       </ul>
     </section>
-    <img src="./images/amsterdam.jpg" alt="Destination Image" class="background-image">
 
+    <img src="./images/amsterdam.jpg" alt="Destination Image" class="background-image">
 
     <section class="destination-content">
       <h1>Amsterdam - The Venice of the North</h1>
 
       <h2>Top Attractions</h2>
       <ul>
-        <li>The Anne Frank House</li>
-        <p>The Anne Frank House is a poignant museum dedicated to the Jewish diarist Anne Frank, who hid in the house
-          during World War II. Visitors can explore the Secret Annex where Anne and her family lived in hiding, as well
-          as learn about her life and legacy through exhibits that recount the horrors of the Holocaust.</p>
-
-        <li>The Rijksmuseum</li>
-        <p>The Rijksmuseum is the largest and most prestigious museum in the Netherlands, housing a vast collection of
-          Dutch art and history. It showcases masterpieces from the Golden Age, including works by Rembrandt, Vermeer,
-          and Van Gogh. The museum's beautifully restored building and gardens are attractions in themselves.</p>
-
-        <li>Travel Tips</li>
-        <p>Best Time to Visit:</p>
-        <p>Spring (April-May) to enjoy the famous tulip season, or Fall (September-October) for fewer tourists and
-          pleasant weather.</p>
-
-        <p>Local Customs:</p>
-        <p>Greet with "Hallo" (hello) and "Dank je" (thank you). Cycling is a major part of the culture, so be mindful
-          of bike lanes. Tipping is appreciated but not mandatory, usually rounding up the bill.</p>
-
-        <p>Transportation:</p>
-        <p>Trams and Buses: The public transport system is extensive and efficient. Cycling: Rent a bike to experience
-          the city like a local. Walking: Ideal for exploring the central canal areas. Ferries: Free ferries across the
-          IJ river to the north of the city.</p>
+        <li>
+          <p><strong>The Anne Frank House</strong></p>
+          <p>The Anne Frank House is a poignant museum dedicated to the Jewish diarist Anne Frank, who hid in the house
+            during World War II. Visitors can explore the Secret Annex where Anne and her family lived in hiding, as
+            well as learn about her life and legacy through exhibits that recount the horrors of the Holocaust.</p>
+        </li>
+        <li>
+          <p><strong>The Rijksmuseum</strong></p>
+          <p>The Rijksmuseum is the largest and most prestigious museum in the Netherlands, housing a vast collection of
+            Dutch art and history. It showcases masterpieces from the Golden Age, including works by Rembrandt, Vermeer,
+            and Van Gogh. The museum's beautifully restored building and gardens are attractions in themselves.</p>
+        </li>
       </ul>
 
+      <h2>Travel Tips</h2>
+      <ul>
+        <li>
+          <strong>Best Time to Visit:</strong>
+          <p>Spring (April-May) to enjoy the famous tulip season, or Fall (September-October) for fewer tourists and
+            pleasant weather.</p>
+        </li>
+        <li>
+          <strong>Local Customs:</strong>
+          <p>Greet with "Hallo" (hello) and "Dank je" (thank you). Cycling is a major part of the culture, so be mindful
+            of bike lanes. Tipping is appreciated but not mandatory, usually rounding up the bill.</p>
+        </li>
+        <li>
+          <strong>Transportation:</strong>
+          <p>Trams and Buses: The public transport system is extensive and efficient. Cycling: Rent a bike to experience
+            the city like a local. Walking: Ideal for exploring the central canal areas. Ferries: Free ferries across
+            the IJ river to the north of the city.</p>
+        </li>
+      </ul>
     </section>
+
   </main>
 
   <footer>
