--- a/barcelona.html
+++ b/barcelona.html
@@ -25,6 +25,7 @@
   <main>
 
     <section class="local-navigation">
+      <h1>Explore our favorite Destinations</h1>
       <ul>
         <li><a href="paris.html">Paris</a></li>
         <li><a href="rome.html">Rome</a></li>
@@ -35,40 +36,40 @@
     </section>
     <img src="./images/barcelona.jpg" alt="Destination Image" class="background-image">
 
-
     <section class="destination-content">
       <h1>Barcelona - The City of Gaudí</h1>
 
       <h2>Top Attractions</h2>
       <ul>
-        <li>La Sagrada Família</li>
-        <p>La Sagrada Família is Antoni Gaudí's most famous masterpiece and an iconic symbol of Barcelona. This massive
-          basilica, still under construction, features stunning facades and intricate details that reflect Gaudí's
-          unique architectural vision, blending Gothic and Art Nouveau styles. Its interior is filled with light and
-          color from the large stained-glass windows.</p>
-
-        <li>Park Güell</li>
-        <p>Park Güell is a whimsical public park designed by Gaudí, offering panoramic views of the city. The park
-          features colorful mosaics, serpentine benches, and organic architecture that seamlessly blends with nature.
-          It's a must-see for art and architecture lovers, showcasing Gaudí's playful and innovative style.</p>
-
-        <li>Travel Tips</li>
-        <p>Best Time to Visit:</p>
-        <p>Spring (April-June) and Fall (September-October) for mild weather and fewer crowds. Avoid the peak summer
-          months due to the heat and tourists.</p>
-
-        <p>Local Customs:</p>
-        <p>Greet with "Hola" (hello) and "Gracias" (thank you). Be aware of the siesta culture, where many shops and
-          restaurants close in the afternoon. Dinner is usually served late, around 9-10 PM. Tipping is not obligatory,
-          but rounding up is appreciated.</p>
-
-        <p>Transportation:</p>
-        <p>Metro: Fast and reliable, the best way to get around the city. Walking: Ideal for exploring the Gothic
-          Quarter and Las Ramblas. Biking: Barcelona has a well-established bike-share system. Taxis and buses are also
-          available, but be mindful of traffic in the city center.</p>
+        <li>
+          <h3>La Sagrada Família</h3>
+          <p>La Sagrada Família is Antoni Gaudí's most famous masterpiece and an iconic symbol of Barcelona. This
+            massive
+            basilica, still under construction, features stunning facades and intricate details that reflect Gaudí's
+            unique architectural vision, blending Gothic and Art Nouveau styles. Its interior is filled with light and
+            color from the large stained-glass windows.</p>
+        </li>
+        <li>
+          <h3>Park Güell</h3>
+          <p>Park Güell is a whimsical public park designed by Gaudí, offering panoramic views of the city. The park
+            features colorful mosaics, serpentine benches, and organic architecture that seamlessly blends with nature.
+            It's a must-see for art and architecture lovers, showcasing Gaudí's playful and innovative style.</p>
+        </li>
       </ul>
 
-
+      <h2>Travel Tips</h2>
+      <ul>
+        <li><strong>Best Time to Visit:</strong> Spring (April-June) and Fall (September-October) for mild weather and
+          fewer crowds. Avoid the peak summer months due to the heat and tourists.</li>
+        <li><strong>Local Customs:</strong> Greet with "Hola" (hello) and "Gracias" (thank you). Be aware of the siesta
+          culture, where many shops and restaurants close in the afternoon. Dinner is usually served late, around 9-10
+          PM.
+          Tipping is not obligatory, but rounding up is appreciated.</li>
+        <li><strong>Transportation:</strong> Metro: Fast and reliable, the best way to get around the city. Walking:
+          Ideal
+          for exploring the Gothic Quarter and Las Ramblas. Biking: Barcelona has a well-established bike-share system.
+          Taxis and buses are also available, but be mindful of traffic in the city center.</li>
+      </ul>
 
     </section>
   </main>
