--- a/berlin.html
+++ b/berlin.html
@@ -25,6 +25,7 @@
   <main>
 
     <section class="local-navigation">
+      <h1>Explore our favorite Destinations</h1>
       <ul>
         <li><a href="paris.html">Paris</a></li>
         <li><a href="rome.html">Rome</a></li>
@@ -35,39 +36,43 @@
     </section>
     <img src="./images/berlin.jpg" alt="Destination Image" class="background-image">
 
-
     <section class="destination-content">
       <h1>Berlin - The City of Freedom</h1>
 
       <h2>Top Attractions</h2>
       <ul>
-        <li>The Brandenburg Gate</li>
-        <p>The Brandenburg Gate is one of Berlin's most famous landmarks. Built in the 18th century as a symbol of
-          peace, it has witnessed many historic events, including the fall of the Berlin Wall in 1989. The gate,
-          designed in neoclassical style, stands at the end of Unter den Linden boulevard and remains a powerful symbol
-          of Germany's reunification.</p>
-
-        <li>The Berlin Wall Memorial</li>
-        <p>The Berlin Wall Memorial is a key site for understanding the division of Berlin during the Cold War.
-          Stretching along Bernauer Strasse, the memorial preserves remnants of the original wall, including a
-          watchtower and border installations. It provides a sobering look at the impact of the wall on the city and its
-          people, commemorating those who lost their lives trying to escape to West Berlin.</p>
-
-        <li>Travel Tips</li>
-        <p>Best Time to Visit:</p>
-        <p>Spring (April-June) and Fall (September-October) for pleasant weather and cultural festivals.</p>
-
-        <p>Local Customs:</p>
-        <p>Greet with "Hallo" (hello) and "Danke" (thank you). Punctuality is important in Germany. Be respectful when
-          visiting historical sites like the Berlin Wall.</p>
-
-        <p>Transportation:</p>
-        <p>U-Bahn and S-Bahn: Efficient public transport networks, ideal for getting around the city. Cycling: Berlin is
-          bike-friendly with dedicated lanes. Walking: Great for exploring central districts like Mitte and Kreuzberg.
-          Taxis and ride-shares are available, but public transport is often faster and more affordable.</p>
+        <li>
+          <h3>The Brandenburg Gate</h3>
+          <p>The Brandenburg Gate is one of Berlin's most famous landmarks. Built in the 18th century as a symbol of
+            peace,
+            it has witnessed many historic events, including the fall of the Berlin Wall in 1989. The gate, designed in
+            neoclassical style, stands at the end of Unter den Linden boulevard and remains a powerful symbol of
+            Germany's
+            reunification.</p>
+        </li>
+        <li>
+          <h3>The Berlin Wall Memorial</h3>
+          <p>The Berlin Wall Memorial is a key site for understanding the division of Berlin during the Cold War.
+            Stretching
+            along Bernauer Strasse, the memorial preserves remnants of the original wall, including a watchtower and
+            border
+            installations. It provides a sobering look at the impact of the wall on the city and its people,
+            commemorating
+            those who lost their lives trying to escape to West Berlin.</p>
+        </li>
       </ul>
 
+      <h2>Travel Tips</h2>
+      <p><strong>Best Time to Visit:</strong> Spring (April-June) and Fall (September-October) for pleasant weather and
+        cultural festivals.</p>
 
+      <p><strong>Local Customs:</strong> Greet with "Hallo" (hello) and "Danke" (thank you). Punctuality is important in
+        Germany. Be respectful when visiting historical sites like the Berlin Wall.</p>
+
+      <p><strong>Transportation:</strong> U-Bahn and S-Bahn: Efficient public transport networks, ideal for getting
+        around the city. Cycling: Berlin is bike-friendly with dedicated lanes. Walking: Great for exploring central
+        districts like Mitte and Kreuzberg. Taxis and ride-shares are available, but public transport is often faster
+        and more affordable.</p>
 
     </section>
   </main>
