--- a/f4.html
+++ b/f4.html
@@ -32,13 +32,11 @@
 
         <h2>Our Commitment to the Environment</h2>
         <p>At GoEurope, we are committed to sustainability and minimizing our environmental impact. We prioritize
-            eco-friendly
-            practices such as partnering with airlines that have carbon offset programs, offering green accommodations,
-            and
-            promoting sustainable travel options. We aim to ensure that your European adventures not only create
-            unforgettable
-            memories but also contribute to preserving the beauty of our planet.</p>
+            eco-friendly practices such as partnering with airlines that have carbon offset programs, offering green
+            accommodations, and promoting sustainable travel options. We aim to ensure that your European adventures not
+            only create unforgettable memories but also contribute to preserving the beauty of our planet.</p>
     </div>
+
     <div class="faq-section">
         <h2>Frequently Asked Questions (FAQ)</h2>
         <div class="faq-item">
@@ -52,52 +50,46 @@
                 package, or contact our customer service team for assistance.</p>
         </div>
         <div class="faq-item">
-            <div class="faq-item">
-                <h3>Does GoEurope accommodate travelers with special needs or allergies?</h3>
-                <p>Yes, GoEurope is committed to ensuring all travelers have a comfortable experience. We offer special
-                    assistance for passengers with mobility challenges and cater to dietary restrictions and allergies.
-                    Please inform us in advance so we can ensure proper arrangements. Use our contact form for more
-                    information.</p>
-            </div>
-
+            <h3>Does GoEurope accommodate travelers with special needs or allergies?</h3>
+            <p>Yes, GoEurope is committed to ensuring all travelers have a comfortable experience. We offer special
+                assistance for passengers with mobility challenges and cater to dietary restrictions and allergies.
+                Please inform us in advance so we can ensure proper arrangements. Use our contact form for more
+                information.</p>
         </div>
     </div>
 
-    <body>
-        <div class="contact-form" id="contact-form">
-            <h2>Contact Us</h2>
-            <form action="#thankyou" method="get">
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name" required><br><br>
+    <div class="contact-form" id="contact-form">
+        <h2>Contact Us</h2>
+        <form action="#thankyou" method="get">
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name" required><br><br>
 
-                <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email" required><br><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br><br>
 
-                <label for="inquiry-type">Inquiry Type:</label><br>
-                <select id="inquiry-type" name="inquiry-type" required>
-                    <option value="">Select an option</option>
-                    <option value="general">General Inquiry</option>
-                    <option value="booking">Booking Question</option>
-                    <option value="support">Customer Support</option>
-                    <option value="feedback">Feedback</option>
-                </select><br><br>
+            <label for="inquiry-type">Inquiry Type:</label><br>
+            <select id="inquiry-type" name="inquiry-type" required>
+                <option value="">Select an option</option>
+                <option value="general">General Inquiry</option>
+                <option value="booking">Booking Question</option>
+                <option value="support">Customer Support</option>
+                <option value="feedback">Feedback</option>
+            </select><br><br>
 
-                <label for="subject">Subject:</label><br>
-                <input type="text" id="subject" name="subject"><br><br>
+            <label for="subject">Subject:</label><br>
+            <input type="text" id="subject" name="subject"><br><br>
 
-                <label for="message">Message:</label><br>
-                <textarea id="message" name="message" rows="4" required></textarea><br><br>
+            <label for="message">Message:</label><br>
+            <textarea id="message" name="message" rows="4" required></textarea><br><br>
 
-                <input type="submit" value="Submit">
-            </form>
-
-        </div>
-    </body>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
 
     <footer>
         <p>&copy; 2024 EuropeGO. All rights reserved.</p>
     </footer>
-</body>
 
+</body>
 
 </html>
