--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GoEurope</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,14 +16,13 @@
         <li><a href="f3.html">Packages</a></li>
         <li><a href="f4.html">About us</a></li>
     </ul>
+
     <div class="image-container">
         <img src="./images/europe.jpg" alt="Destination Image" class="background-image">
     </div>
 
-    </div>
     <div class="summary-text">
-        <h1>Explore Europe with GoEurope
-        </h1>
+        <h1>Explore Europe with GoEurope</h1>
         <p>
             Welcome to GoEurope!
             Discover Europe's most exciting and unique destinations with us. Whether you dream of exploring the historic
@@ -32,14 +31,13 @@
             unforgettable experience. Let us be your guide to a Europe full of adventure, culture, and amazing memories.
             Choose your next dream destination and start your European journey today!
         </p>
-        <a href="https://cute-pithivier-acf2ef.netlify.app/" class="simple-link">Länk till rapport
-        </a>
-
+        <a href="https://cute-pithivier-acf2ef.netlify.app/" class="simple-link">Länk till rapport</a>
     </div>
 
     <footer>
         <p>&copy; 2024 EuropeGO. All rights reserved.</p>
     </footer>
+
 </body>
 
 </html>
