--- a/paris.html
+++ b/paris.html
@@ -11,7 +11,6 @@
 
 <body>
 
-
     <header>
         <nav>
             <ul class="navigation">
@@ -26,6 +25,7 @@
     <main>
 
         <section class="local-navigation">
+            <h1>Explore our favorite Destinations</h1>
             <ul>
                 <li><a href="paris.html">Paris</a></li>
                 <li><a href="rome.html">Rome</a></li>
@@ -36,54 +36,52 @@
         </section>
         <img src="./images/paris.jpg" alt="Destination Image" class="background-image">
 
-
         <section class="destination-content">
-            <h1>Paris - The city of lights </h1>
-
+            <h1>Paris - The City of Lights</h1>
 
             <h2>Top Attractions</h2>
             <ul>
-                <li>The Eiffel Tower</li>
-                <p> The Eiffel Tower is an iconic iron structure located in Paris, France. Built by engineer Gustave
-                    Eiffel for the 1889 World's Fair, it stands 330 meters tall and was initially criticized by some
-                    for
-                    its design. However, it quickly became a global symbol of French engineering and architectural
-                    innovation. The tower has three observation levels, offering panoramic views of Paris, and is
-                    one of
-                    the most visited monuments in the world. Originally meant to be dismantled after 20 years, it
-                    was
-                    preserved due to its value for communications technology and has since become a beloved
-                    landmark.
-                </p>
-                <li> Museum of Louvre</li>
-                <p> The Louvre Museum, located in Paris, France, is the world's largest art museum and a historic
-                    monument. Originally a royal palace, it became a public museum in 1793 after the French
-                    Revolution.
-                    The Louvre houses over 35,000 works of art, including famous pieces like Leonardo da Vinci's
-                    Mona
-                    Lisa and the ancient Greek statue Venus de Milo. Its collections span from antiquity to the 19th
-                    century, showcasing art, sculptures, and artifacts from various cultures. The museum is renowned
-                    for
-                    its vast and diverse collection, attracting millions of visitors each year.
-                </p>
-                <li> Travel tips </li>
-                <p> Best Time to Visit:
-
-                    Spring (April-June) and Fall (September-October) for mild weather and fewer crowds.
-                    Local Customs:
-
-                    Greet with "Bonjour" (hello) and "Merci" (thank you).
-                    Dress smartly, especially in restaurants and churches.
-                    Tipping is included, but rounding up is appreciated.
-                    Transportation:
-
-                    Metro: Fast and affordable; multi-day passes available.
-                    Walking: Ideal for exploring central areas.
-                    Bikes: Use the “Vélib” bike-share for short trips.
-                    Uber and taxis are available, but taxis cost more at night.
-                    Paris is best enjoyed at a relaxed pace, embracing its cultural charm.</p>
+                <li>
+                    <h3>The Eiffel Tower</h3>
+                    <p>The Eiffel Tower is an iconic iron structure located in Paris, France. Built by engineer Gustave
+                        Eiffel
+                        for the 1889 World's Fair, it stands 330 meters tall and was initially criticized by some for
+                        its
+                        design. However, it quickly became a global symbol of French engineering and architectural
+                        innovation.
+                        The tower has three observation levels, offering panoramic views of Paris, and is one of the
+                        most
+                        visited monuments in the world. Originally meant to be dismantled after 20 years, it was
+                        preserved due
+                        to its value for communications technology and has since become a beloved landmark.</p>
+                </li>
+                <li>
+                    <h3>The Louvre Museum</h3>
+                    <p>The Louvre Museum, located in Paris, France, is the world's largest art museum and a historic
+                        monument.
+                        Originally a royal palace, it became a public museum in 1793 after the French Revolution. The
+                        Louvre
+                        houses over 35,000 works of art, including famous pieces like Leonardo da Vinci's Mona Lisa and
+                        the
+                        ancient Greek statue Venus de Milo. Its collections span from antiquity to the 19th century,
+                        showcasing
+                        art, sculptures, and artifacts from various cultures. The museum is renowned for its vast and
+                        diverse
+                        collection, attracting millions of visitors each year.</p>
+                </li>
             </ul>
 
+            <h2>Travel Tips</h2>
+            <p><strong>Best Time to Visit:</strong> Spring (April-June) and Fall (September-October) for mild weather
+                and fewer crowds.</p>
+
+            <p><strong>Local Customs:</strong> Greet with "Bonjour" (hello) and "Merci" (thank you). Dress smartly,
+                especially in restaurants and churches. Tipping is included, but rounding up is appreciated.</p>
+
+            <p><strong>Transportation:</strong> Metro: Fast and affordable; multi-day passes available. Walking: Ideal
+                for exploring central areas. Bikes: Use the “Vélib” bike-share for short trips. Uber and taxis are
+                available, but taxis cost more at night. Paris is best enjoyed at a relaxed pace, embracing its cultural
+                charm.</p>
 
         </section>
     </main>
