--- a/rome.html
+++ b/rome.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>EuropeGO - Destination Name</title>
+  <title>EuropeGO - Rome</title>
   <link rel="stylesheet" href="style.css"> <!-- Link to your main CSS file -->
 </head>
 
@@ -22,10 +22,12 @@
       </ul>
     </nav>
   </header>
+
   <!-- Main Content -->
   <main>
     <!-- Local Navigation -->
     <section class="local-navigation">
+      <h1>Explore our favorite Destinations</h1>
       <ul>
         <li><a href="paris.html">Paris</a></li>
         <li><a href="rome.html">Rome</a></li>
@@ -34,54 +36,45 @@
         <li><a href="barcelona.html">Barcelona</a></li>
       </ul>
     </section>
+
     <img src="./images/rome.jpg" alt="Destination Image" class="background-image">
 
     <!-- Destination Content -->
     <section class="destination-content">
-      <h1>Rome - The eternal city </h1>
-
+      <h1>Rome - The Eternal City</h1>
 
       <h2>Top Attractions</h2>
       <ul>
-        <li>The Colosseum</li>
-        <p>
-          The Colosseum is an ancient Roman amphitheater located in Rome, Italy. Built between 70-80 AD, it
-          could hold up to 50,000 spectators and was used for gladiatorial contests, public spectacles, and
-          dramas. It remains a symbol of Roman engineering and is one of the most visited landmarks in the
-          world. Today, it stands partially ruined due to earthquakes and stone theft but is a significant
-          historical site, offering tours that delve into its rich past.
-        </p>
-
-        <li>The Vatican Museums</li>
-        <p>
-          The Vatican Museums, located within Vatican City, contain some of the most important art and
-          cultural treasures of the Catholic Church. Established in the early 16th century, the museums house
-          famous masterpieces like Michelangelo's ceiling in the Sistine Chapel and Raphael's Rooms. Visitors
-          can explore a vast collection that includes ancient Roman and Egyptian art, Renaissance paintings, and
-          more. The museums attract millions of visitors annually, offering a journey through centuries of art
-          and history.
-        </p>
-
-        <li>Travel Tips</li>
-        <p>
-          Best Time to Visit:
-          <br>
-          Spring (April-June) and Fall (September-October) for pleasant weather and fewer tourists.
-          <br>
-          Local Customs:
-          <br>
-          Greet with "Buongiorno" (good morning) and "Grazie" (thank you). Dress modestly when visiting churches,
-          including the Vatican.
-          <br>
-          Transportation:
-          <br>
-          Metro and buses are the best options for public transport. Walking is ideal for the city center. Taxis
-          and ridesharing services are also available. Be cautious of pickpockets in crowded areas.
-        </p>
+        <li>
+          <h3>The Colosseum</h3>
+          <p>The Colosseum is an ancient Roman amphitheater located in Rome, Italy. Built between 70-80 AD, it
+            could hold up to 50,000 spectators and was used for gladiatorial contests, public spectacles, and
+            dramas. It remains a symbol of Roman engineering and is one of the most visited landmarks in the
+            world. Today, it stands partially ruined due to earthquakes and stone theft but is a significant
+            historical site, offering tours that delve into its rich past.</p>
+        </li>
+        <li>
+          <h3>The Vatican Museums</h3>
+          <p>The Vatican Museums, located within Vatican City, contain some of the most important art and
+            cultural treasures of the Catholic Church. Established in the early 16th century, the museums house
+            famous masterpieces like Michelangelo's ceiling in the Sistine Chapel and Raphael's Rooms. Visitors
+            can explore a vast collection that includes ancient Roman and Egyptian art, Renaissance paintings, and
+            more. The museums attract millions of visitors annually, offering a journey through centuries of art
+            and history.</p>
+        </li>
       </ul>
 
-
-
+      <!-- Travel Tips Section -->
+      <h2>Travel Tips</h2>
+      <ul>
+        <li><strong>Best Time to Visit:</strong> Spring (April-June) and Fall (September-October) for pleasant weather
+          and fewer tourists.</li>
+        <li><strong>Local Customs:</strong> Greet with "Buongiorno" (good morning) and "Grazie" (thank you). Dress
+          modestly when visiting churches, including the Vatican.</li>
+        <li><strong>Transportation:</strong> Metro and buses are the best options for public transport. Walking is ideal
+          for the city center. Taxis and ridesharing services are also available. Be cautious of pickpockets in crowded
+          areas.</li>
+      </ul>
     </section>
   </main>
 
